<resources>
    <string name="app_name">intentProject</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="play">Play</string>
    <string name="welcome_message">Welcome, %s!</string>
    <string name="guess_a_letter_a_z">Guess a letter (a–z)</string>
    <string name="enter">Enter</string>
    <string name="guess">Guess</string>
    <string name="reset">Reset</string>
    <string name="back_to_main">Back to Main</string>
    <string name="placeholder">Placeholder</string>
    <string name="view_statistics">View Statistics</string>
    <string name="play_with_numbers">Play with numbers</string>
    <string name="continue_unfinished_game">Continue Unfinished Game</string>
    <string name="new_player">New Player</string>
    <string name="back_to_game">Back to Game</string>
    <string name="guess_a_number_1_26_attempts_left">Guess a number (1–26) — Attempts left: %d</string>
    <string name="no_stats_available">No Stats Available</string>

    <string name="game_over_message" translatable="false">GAME OVER!</string>
    <string name="guess_a_letter_a_z_attempts_left">"Guess a letter (a–z) — Attempts left: ,%s!"</string>
    <string name="bullet_point" translatable="false">• %s!</string>

    <string-array name="rules_array">
        <item>Rule 1: Guess the hidden letter.</item>
        <item>Rule 2: You can guess as many times as you need.</item>
        <item>Rule 3: After each guess, you will be told if the correct letter is alphabetically above or below your guess.</item>
    </string-array>

</resources>